--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,8 +1,1 @@
-<html>
-<head>
-<title></title>
-</head>
-<body>
-{$result.id}--{$result.data}
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>vue-manage-system | 基于Vue的后台管理系统</title><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"><meta name=keywords content="vue, vue-manage-system, manage-system, 后台, 管理系统, element"><meta name=description content="基于Vue2 + Element UI 的后台管理系统解决方案"><script type=text/javascript src=http://www.x3dom.org/download/x3dom.js></script><link rel=stylesheet type=text/css href=http://www.x3dom.org/download/x3dom.css><link href=./static/css/app.2af3125f13b3b97af8a22af7fa00a507.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.98dea54aba9ddd151614.js></script><script type=text/javascript src=./static/js/vendor.4757f41bea2133c868ba.js></script><script type=text/javascript src=./static/js/app.1109664b22acc92060ac.js></script></body></html>
